build: added rollup for library build

--- a/.releaserc
+++ b/.releaserc
@@ -24,7 +24,7 @@
     [
       "@semantic-release/github",
       {
-        "assets": [{ "path": "dist/*.tgz", "label": "Tiny app distribution package" }]
+        "assets": [{ "path": "dist/*.tgz", "label": "Distribution package" }]
       }
     ]
   ]
