--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,8 @@
     "target": "es5",
     "module": "esnext",
     "strict": true,
-    "allowJs": true,
-    "resolveJsonModule": true,
+    "declaration": true,
     "moduleResolution": "node",
-    "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
