--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
       "url": "https://github.com/swiftwork"
     }
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.umd.min.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/"
@@ -47,6 +48,8 @@
     "jsonschema": "1.2.5"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-node-resolve": "7.1.1",
     "@semantic-release/changelog": "5.0.0",
     "@semantic-release/github": "7.0.4",
     "@typescript-eslint/eslint-plugin": "2.22.0",
@@ -60,6 +63,9 @@
     "prettier": "1.19.1",
     "rimraf": "3.0.2",
     "rollup": "2.0.0",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-globals": "1.4.0",
+    "rollup-plugin-terser": "5.3.0",
     "rollup-plugin-typescript2": "0.26.0",
     "semantic-release": "17.0.4",
     "ts-jest": "25.2.1",
