--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,6 +28,10 @@ jobs:
           registry-url: https://npm.pkg.github.com
           scope: trutoo
 
+      - name: Append npm registry authentication to .npmrc
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ${NPM_CONFIG_USERCONFIG}
+
       - name: Install dependencies using CI
         run: npm ci
         env:
@@ -48,14 +52,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Used by standard npm publish
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Used for github releases through semantic release
 
-      - name: Swap registry to NPM
-        uses: actions/setup-node@v1
-        if: env.VERSION != null
-        with:
-          registry-url: https://registry.npmjs.org
-
       - name: Publish package to NPM
-        run: npm publish
-        if: env.VERSION != null
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --registry https://registry.npmjs.org
+        if: env.VERSION != null # Only if semantic-release publishes the package
