docs: added npm to readme and removed obsolete flag

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "prebuild": "rimraf dist/*",
     "build": "rollup -c",
     "test": "jest",
-    "postversion": "npm run build -- --mode=production",
+    "postversion": "npm run build",
     "release": "semantic-release"
   },
   "dependencies": {
