ci: added commit body table to renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,6 +11,7 @@
       "groupName": "minor dependencies",
       "automerge": true,
       "automergeType": "branch",
+      "commitBodyTable": true,
       "prConcurrentLimit": 10,
       "schedule": ["after 9pm on sunday", "after 9pm on wednesday"]
     }
