--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "name": "Trutoo AB",
     "url": "https://www.trutoo.com/"
   },
-  "license": "GPL-3.0",
+  "license": "MIT",
   "repository": "https://github.com/trutoo/event-bus.git",
   "bugs": "https://github.com/trutoo/event-bus/issues",
   "contributors": [
