--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -1,5 +1,13 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["jest.config.js", "tools/**/*.js", "src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    ".eslintrc.js",
+    "jest.config.js",
+    "rollup.config.js",
+    "tools/**/*.js",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
