--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# misc
 .DS_Store
-node_modules
+*.log*
+
+# dependencies
+**/.yarn/*
+!**/.yarn/patches
+!**/.yarn/plugins
+!**/.yarn/releases
+!**/.yarn/sdks
+!**/.yarn/versions
+**/node_modules
+**/.pnp
+**/.pnp.*
+
+# project
 dist
 coverage
 act
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Log files
-*.log*
