--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,34 @@
 {
-  "editor.formatOnSave": true,
-  "editor.tabSize": 2,
-  "eslint.validate": [
-    "javascript",
-    "typescript"
-  ],
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.codeActionsOnSave": ["source.formatDocument", "source.fixAll.eslint"],
+  "editor.formatOnSave": false,
+  "eslint.experimental.useFlatConfig": true,
   "files.associations": {
     ".releaserc": "jsonc"
   },
@@ -15,6 +39,5 @@
     "**/node_modules": true,
     "dist": true
   },
-  "tsImportSorter.configuration.wrappingStyle": "prettier",
   "typescript.tsdk": "node_modules/typescript/lib"
 }
