--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@trutoo/event-bus",
   "version": "1.0.0",
   "description": "Typesafe cross-platform pubsub event bus ensuring reliable communication between fragments and micro frontends.",
+  "type": "module",
   "keywords": [
     "event bus",
     "communication",
@@ -46,30 +47,34 @@
     "jsonschema": "1.4.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "22.0.2",
-    "@rollup/plugin-node-resolve": "14.1.0",
-    "@semantic-release/changelog": "6.0.1",
+    "@rollup/plugin-commonjs": "25.0.8",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/exec": "6.0.3",
-    "@semantic-release/github": "8.0.6",
-    "@typescript-eslint/eslint-plugin": "5.38.1",
-    "@typescript-eslint/parser": "5.38.1",
-    "conventional-changelog-angular": "5.0.13",
-    "eslint": "8.24.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "husky": "8.0.1",
-    "jest": "29.1.2",
-    "prettier": "2.7.1",
-    "rimraf": "3.0.2",
-    "rollup": "2.79.1",
+    "@semantic-release/github": "10.0.5",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
+    "conventional-changelog-angular": "8.0.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-simple-import-sort": "12.1.0",
+    "eslint-plugin-unused-imports": "3.2.0",
+    "husky": "9.0.11",
+    "jest": "29.7.0",
+    "prettier": "3.3.0",
+    "rimraf": "5.0.7",
+    "rollup": "4.18.0",
     "rollup-plugin-node-polyfills": "0.2.1",
-    "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-typescript2": "0.34.0",
-    "semantic-release": "19.0.5",
-    "ts-jest": "29.0.3",
-    "typescript": "4.8.4"
+    "semantic-release": "24.0.0",
+    "ts-jest": "29.1.4",
+    "typescript": "5.4.5"
   },
   "optionalDependencies": {
-    "@types/jest": "29.1.1"
-  }
+    "@types/jest": "29.5.12"
+  },
+  "packageManager": "yarn@4.2.2"
 }
