--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -1,13 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    ".eslintrc.js",
-    "jest.config.js",
-    "rollup.config.js",
-    "tools/**/*.js",
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": [".eslintrc.js", "jest.config.js", "rollup.config.js", "tools/**/*.js", "src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
