--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-push": "npm run test",
+      "pre-push": "yarn test",
       "commit-msg": "node tools/commit-msg.js"
     }
   },
@@ -40,7 +40,7 @@
     "prebuild": "rimraf dist/*",
     "build": "rollup -c",
     "test": "jest",
-    "postversion": "npm run build",
+    "postversion": "yarn build",
     "release": "semantic-release"
   },
   "dependencies": {
@@ -52,7 +52,6 @@
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/exec": "6.0.3",
     "@semantic-release/github": "10.0.5",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
