--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,13 @@ jobs:
 
     steps:
       - name: Check out source code
-        uses: actions/checkout@v2-beta
+        uses: actions/checkout@v4
 
       - name: Set up Node.js version ${{ matrix.node }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+          cache: 'yarn'
 
       - name: Install dependencies using CI
         run: yarn --immutable
