--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,8 +28,8 @@ jobs:
           node-version: 20.x
           cache: 'yarn'
 
-      - name: Install dependencies
-        run: yarn --immutable
+      - name: 📥 Install dependencies
+        uses: ./.github/actions/install
 
       - name: Run tests on package
         run: yarn test
