--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
 
-      - name: Install dependencies using CI
-        run: yarn --immutable
+      - name: 📥 Install dependencies
+        uses: ./.github/actions/install
 
       - name: Run tests on package
         run: yarn test
