--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Check out source code
         uses: actions/checkout@v4
 
+      - name: ⚙️ Enable corepack
+        if: inputs.enable-corepack == 'true'
+        shell: bash
+        working-directory: ${{ inputs.cwd }}
+        run: corepack enable
+
       - name: Set up Node.js version ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
