feat: update dependencies and configurations (#101)
* feat: update dependencies and configurations

* ci: removal of npm

* ci: updated actions versions

* ci: added more robust installation step

* ci: move corepack to earlier

* ci: remove checks and package env

* chore: remove deps from lock file

* chore: cleanup names and remove setup-node cache

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,58 +3,48 @@ name: Continuous Delivery
 on:
   push:
     branches:
-      - master
+      - main
       - release/*
 
 jobs:
   delivery:
-    name: Node 18.x
+    name: Node 20.x
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out source code
-        uses: actions/checkout@v2-beta
+      - name: ☁️ Check out source code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set global git user and email
+      - name: ⚙️ Set global git user and email
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
 
-      - name: Set up Node.js version 18.x
-        uses: actions/setup-node@v3
+      - name: ⚙️ Enable corepack
+        shell: bash
+        run: corepack enable
+
+      - name: ⚙️ Set up Node.js version 20.x
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-          registry-url: https://npm.pkg.github.com
-          scope: trutoo
+          node-version: 20.x
 
-      - name: Append npm registry authentication to .npmrc
-        run: |
-          echo -e '\n//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}\n' >> ${NPM_CONFIG_USERCONFIG}
+      - name: 📥 Install dependencies
+        uses: ./.github/actions/install
 
-      - name: Install dependencies using CI
-        run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Used in .npmrc to install packages from github
+      - name: 🧪 Run tests on package
+        run: yarn test
 
-      - name: Run tests on package
-        run: npm test
-
-      - name: Update coveralls
-        uses: coverallsapp/github-action@master
+      - name: 📝 Update coveralls
+        uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and publish package to GitHub Packages and GitHub Release
-        run: npm run release
+      - name: 🚀 Build and publish package to GitHub Packages and GitHub Release
+        run: yarn release
         env:
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Used to verify access through semantic release
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Used by standard npm publish
+          NPM_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }} # Used to verify access through semantic release
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }} # Used by standard npm publish
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Used for github releases through semantic release
-
-      - name: Publish package to NPM
-        run: npm publish --access public --@trutoo:registry=https://registry.npmjs.org
-        if: env.VERSION != null # Only if semantic-release publishes the package
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # Used by standard npm publish
