--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Typesafe cross-platform pubsub event bus ensuring reliable communication between fragments and micro frontends.",
   "type": "module",
+  "packageManager": "yarn@4.6.0",
   "keywords": [
     "event bus",
     "communication",
@@ -47,36 +48,35 @@
     "release": "semantic-release"
   },
   "dependencies": {
-    "jsonschema": "1.4.1"
+    "jsonschema": "1.5.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "25.0.8",
-    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-commonjs": "28.0.2",
+    "@rollup/plugin-node-resolve": "16.0.0",
     "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-typescript": "12.1.2",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/github": "10.0.5",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
+    "@semantic-release/github": "11.0.1",
+    "@typescript-eslint/eslint-plugin": "8.22.0",
+    "@typescript-eslint/parser": "8.22.0",
     "conventional-changelog-angular": "8.0.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-simple-import-sort": "12.1.0",
-    "eslint-plugin-unused-imports": "3.2.0",
-    "husky": "9.0.11",
+    "eslint": "9.19.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "husky": "9.1.7",
     "jest": "29.7.0",
-    "prettier": "3.3.0",
-    "rimraf": "5.0.7",
-    "rollup": "4.18.0",
+    "prettier": "3.4.2",
+    "rimraf": "6.0.1",
+    "rollup": "4.32.1",
     "rollup-plugin-node-polyfills": "0.2.1",
-    "semantic-release": "24.0.0",
-    "ts-jest": "29.1.4",
-    "typescript": "5.4.5"
+    "semantic-release": "24.2.1",
+    "ts-jest": "29.2.5",
+    "typescript": "5.7.3"
   },
   "optionalDependencies": {
-    "@types/jest": "29.5.12"
-  },
-  "packageManager": "yarn@4.2.2"
+    "@types/jest": "29.5.14"
+  }
 }
