--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trutoo/event-bus",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Typesafe cross-platform pubsub event bus ensuring reliable communication between fragments and micro frontends.",
   "type": "module",
   "packageManager": "yarn@4.6.0",
@@ -29,10 +29,26 @@
   ],
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "browser": "dist/index.umd.min.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "sideEffects": false,
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "files": [
-    "dist/"
+    "dist/",
+    "README.md",
+    "LICENSE"
   ],
   "husky": {
     "hooks": {
@@ -48,35 +64,36 @@
     "release": "semantic-release"
   },
   "dependencies": {
-    "jsonschema": "1.5.0"
+    "fast-equals": "^5.2.2",
+    "jsonschema": "^1.5.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "28.0.2",
-    "@rollup/plugin-node-resolve": "16.0.0",
+    "@rollup/plugin-commonjs": "28.0.6",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "16.0.1",
     "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "12.1.2",
+    "@rollup/plugin-typescript": "12.1.3",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/github": "11.0.1",
-    "@typescript-eslint/eslint-plugin": "8.22.0",
-    "@typescript-eslint/parser": "8.22.0",
+    "@semantic-release/github": "11.0.3",
+    "@types/jest": "30.0.0",
+    "@typescript-eslint/eslint-plugin": "8.34.1",
+    "@typescript-eslint/parser": "8.34.1",
     "conventional-changelog-angular": "8.0.0",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prettier": "5.2.3",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-prettier": "5.5.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
     "husky": "9.1.7",
-    "jest": "29.7.0",
-    "prettier": "3.4.2",
+    "jest": "30.0.2",
+    "prettier": "3.5.3",
     "rimraf": "6.0.1",
-    "rollup": "4.32.1",
+    "rollup": "4.44.0",
     "rollup-plugin-node-polyfills": "0.2.1",
-    "semantic-release": "24.2.1",
-    "ts-jest": "29.2.5",
-    "typescript": "5.7.3"
-  },
-  "optionalDependencies": {
-    "@types/jest": "29.5.14"
+    "semantic-release": "24.2.5",
+    "ts-jest": "29.4.0",
+    "tslib": "^2.8.1",
+    "typescript": "5.8.3"
   }
 }
